Более краткий синтаксис для создания списка